--- a/tasks/install_k8spray_chart.yml
+++ b/tasks/install_k8spray_chart.yml
@@ -3,11 +3,16 @@
     chart_path: /tmp/lcm-0.1.0.tgz
     chart_url: "https://www.dropbox.com/s/w3jnqs6k63hlngy/lcm-0.1.0.tgz"
 
-- name:  download lcm chart
-  get_url:
-    url: "{{ chart_url }}"
-    dest: "{{ chart_path }}"
-    force: true
+# XXX redierects support doesnt work :(
+#- name: "download lcm chart"
+#  uri:
+#    url: "{{ chart_url }}"
+#    dest: "{{ chart_path }}"
+#    force: true
+#    follow_redirects: all
+- name: "download lcm char"
+  command: "curl -o {{ chart_path }} -Lk {{ chart_url }}"
+
 
 - name: install lcm chart
   command: "helm install -n k8spray {{ chart_path }}"
