--- a/playbook.yml
+++ b/playbook.yml
@@ -41,6 +41,12 @@
       tags:
         - any
 
+    - shell: "kubectl -n kube-system get pods --ignore-not-found -l name=tiller -o jsonpath='{.items[?(@.status.containerStatuses[0].ready == true)].metadata.name}'"
+      register: tiller_pod_cmd
+      until: tiller_pod_cmd.stdout != ""
+      retries: 100
+      delay: 2
+
     - include: "tasks/install_k8spray_chart.yml"
       tags:
         - any
