--- a/playbook.yml
+++ b/playbook.yml
@@ -67,5 +67,5 @@
         - any
         - k8spray_chart
 
-    - include: "iptables ACCEPT"
+    - name: "iptables ACCEPT"
       command: "iptables -P FORWARD ACCEPT"
