more usefull things

--- a/playbook.yml
+++ b/playbook.yml
@@ -69,3 +69,9 @@
 
     - name: "iptables ACCEPT"
       command: "iptables -P FORWARD ACCEPT"
+
+    - name: utils
+      copy:
+        src: files/bash_aliases
+        dst: /root/.bash_aliases
+
