--- a/playbook.yml
+++ b/playbook.yml
@@ -69,9 +69,14 @@
 
     - name: "iptables ACCEPT"
       command: "iptables -P FORWARD ACCEPT"
+      tags:
+        - any
 
     - name: utils
       copy:
         src: files/bash_aliases
         dst: /root/.bash_aliases
+      tags:
+        - any
+	
 
