fix condition for helm ready

--- a/playbook.yml
+++ b/playbook.yml
@@ -51,7 +51,7 @@
 
     - shell: "helm version"
       register: helm_status
-      until: helm_status.rc != 0
+      until: helm_status.rc == 0
       retries: 100
       delay: 2
       ignore_errors: true
