--- a/tasks/install_k8spray_chart.yml
+++ b/tasks/install_k8spray_chart.yml
@@ -1,19 +1,11 @@
-- name: set fact
-  set_fact:
-    chart_path: /tmp/lcm-0.1.0.tgz
-    #chart_url: "https://www.dropbox.com/s/w3jnqs6k63hlngy/lcm-0.1.0.tgz"
-    chart_url: "https://www.dropbox.com/s/w3jnqs6k63hlngy/lcm-0.1.0.tgz"
+- name: add k8spray chart repo
+  command: "helm repo add k8spray {{ k8spray_helm_repo_url }}"
 
-# XXX redierects support doesnt work :(
-#- name: "download lcm chart"
-#  uri:
-#    url: "{{ chart_url }}"
-#    dest: "{{ chart_path }}"
-#    force: true
-#    follow_redirects: all
-- name: "download lcm chart"
-  command: "curl -o {{ chart_path }} -Lk {{ chart_url }}"
+- name: "copy values.yml"
+  template:
+    src: values.yml.j2
+    dest: /tmp/values.yml
 
 
 - name: install lcm chart
-  command: "helm install --wait --namespace k8spray -n k8spray {{ chart_path }} "
+  command: "helm install --timeout 900 -f /tmp/values.yml --wait --namespace k8spray -n k8spray k8spray/lcm "
