--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 before_script:
-  - minikube delete
+  - sudo minikube delete
 
 bootstrap:
   script:
-    - cd /tmp
-    - git clone http://localhost:10080/bebebeko/k8spray.git
+    - pwd
+    - ls
