--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,7 @@
 before_script:
-  - id
-  - sudo id
+  - sudo minikube delete
+  - sudo docker rmi -f k8spray/ansible:2.3.0.0
 
 bootstrap:
   script:
-    - pwd
-    - ls
+    - bin/bootstrap.sh
