--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 before_script:
-  - sudo -i minikube delete
+  - sudo -i sh -c 'minikube status | grep -i running minikube delete && minikube delete || :'
   - sudo -i sh -c 'docker inspect --type=image k8spray/ansible:2.3.0.0 && echo ok || :'
 
 bootstrap:
