--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,5 +13,5 @@ minikube:
 maas_deploy:
   stage: prepare
   script:
-    - echo -n '7trye3,fhqedd,6fw4nx'  | xargs -d"," -tI% -P0 sh -c 'maas login localhost http://localhost:5240/MAAS/ ${MAAS_KEY} && /usr/local/bin/maas_redeploy.sh %'
+    - echo -n "7trye3,fhqedd,6fw4nx"  | xargs -d"," -tI% -P0 sh -c "maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh %"
 
