enable maas preparing back

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ minikube:
   script:
     - sudo -i `pwd`/bin/bootstrap.sh
 
-#maas_deploy:
-#  stage: prepare
-#  script:
-#    - echo -n "7trye3,fhqedd,6fw4nx"  | xargs -d"," -tI% -P0 sh -c "maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh %"
+maas_deploy:
+  stage: prepare
+  script:
+    - echo -n "7trye3,fhqedd,6fw4nx"  | xargs -d"," -tI% -P0 sh -c "maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh %"
 
