--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,17 @@ minikube:
   script:
     - sudo -i `pwd`/bin/bootstrap.sh
 
-maas_deploy:
+node_7trye3_provision:
   stage: prepare
   script:
-    - echo -n "7trye3,fhqedd,6fw4nx"  | xargs -d"," -tI% -P0 sh -c "maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh %"
+    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh 7trye3
 
+node_fhqedd_provision:
+  stage: prepare
+  script:
+    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh fhqedd
+
+node_6fw4nx_provision:
+  stage: prepare
+  script:
+    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh 6fw4nx
