disable parallel mode

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,10 @@ before_script:
   - sudo -i sh -c 'docker inspect --type=image k8spray/ansible:2.3.0.0 && echo ok || :'
 
 stages:
-    - prepare
+    - prepare1
+    - prepare2
+    - prepare3
+    - prepare4
 
 #minikube:
 #  stage: prepare
@@ -11,21 +14,21 @@ stages:
 #    - sudo -i `pwd`/bin/bootstrap.sh
 
 node_sqy8yh_provision:
-  stage: prepare
+  stage: prepare1
   script:
     - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh sqy8yh
 
 node_fhqedd_provision:
-  stage: prepare
+  stage: prepare2
   script:
     - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh fhqedd
 
 node_6fw4nx_provision:
-  stage: prepare
+  stage: prepare3
   script:
     - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh 6fw4nx
 
 node_7trye3_provision:
-  stage: prepare
+  stage: prepare4
   script:
     - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh 7trye3
