--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
-before_script:
+stages:
+    - cleanup
+    - prepare
+
+cleanup:
   - sudo -i sh -c 'minikube status | grep -i running  && minikube delete || :'
   - sudo -i sh -c 'docker inspect --type=image k8spray/ansible:2.3.0.0 && echo ok || :'
-
-stages:
-    - prepare
 
 minikube:
   stage: prepare
