--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,10 @@ stages:
     - prepare
 
 cleanup:
-  - sudo -i sh -c 'minikube status | grep -i running  && minikube delete || :'
-  - sudo -i sh -c 'docker inspect --type=image k8spray/ansible:2.3.0.0 && echo ok || :'
+  stage: cleanup
+  script:
+    - sudo -i sh -c 'minikube status | grep -i running  && minikube delete || :'
+    - sudo -i sh -c 'docker inspect --type=image k8spray/ansible:2.3.0.0 && echo ok || :'
 
 minikube:
   stage: prepare
