first full aws emplementation
+ wait for install pipeline
+ run scale pipeline
+ wait for scale pipeline
+ always cleanup aws resources

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ stages:
   - prepare
   - start_aws_pipeline
   - wait_for_aws_pipeline_done
+  - scale_aws_pipeline
 
 cleanup:
   stage: cleanup
@@ -30,3 +31,27 @@ wait_for_aws_pipeline_done:
     - export PIPELINE_ID=`cat /tmp/${ENV_ID}`
     - test -n "${PIPELINE_ID}"
     - while [ `curl -s $DECK_ENDPOINT/gate${PIPELINE_ID} | jq -r .status` == "RUNNING" ]; do sleep 5; done
+    - curl -s $DECK_ENDPOINT/gate${PIPELINE_ID} | jq -r .status | grep SUCCEEDED
+
+scale_aws_pipeline:
+  stage: scale_aws_pipeline
+  script:
+    - export PIPELINE_ID=`cat /tmp/${ENV_ID}`
+    - test -n "${PIPELINE_ID}"
+    - >
+      curl -s -d '{"type":"manual",  "user":"[anonymous]", "parameters": {"N": 1" } }' -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' http://$DECK_ENDPOINT/gate/pipelines/lcm/Kubernetes%20scale | jq -r '.ref' | tee /tmp/${ENV_ID}_scale
+
+wait_for_aws_scale_job:
+  stage: wait_for_aws_pipeline_done
+  script:
+    - export PIPELINE_ID=`cat /tmp/${ENV_ID}_scale`
+    - test -n "${PIPELINE_ID}"
+    - while [ `curl -s $DECK_ENDPOINT/gate${PIPELINE_ID} | jq -r .status` == "RUNNING" ]; do sleep 5; done
+    - curl -s $DECK_ENDPOINT/gate${PIPELINE_ID} | jq -r .status | grep SUCCEEDED
+
+cleanup_aws_resources:
+  stage: cleanup_aws_resources
+  script:
+    - >
+      curl -s -d '{"type":"manual",  "user":"[anonymous]", "parameters": {ENV_ID": "'${ENV_ID}'" } }' -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' http://$DECK_ENDPOINT/gate/pipelines/lcm/Kubernetes%20scale | jq -r '.ref' | tee /tmp/${ENV_ID}_scale
+  when: always
