--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - start_aws_pipeline
   - wait_for_aws_pipeline_done
   - scale_aws_pipeline
+  - wait_for_aws_scale_pipeline_done
   - cleanup_aws_resources
 
 cleanup:
@@ -43,7 +44,7 @@ scale_aws_pipeline:
       curl -s -d '{"type":"manual",  "user":"[anonymous]", "parameters": {"N": 1" } }' -X POST --header 'Content-Type: application/json' --header 'Accept: application/json' http://$DECK_ENDPOINT/gate/pipelines/lcm/Kubernetes%20scale | jq -r '.ref' | tee /tmp/${ENV_ID}_scale
 
 wait_for_aws_scale_job:
-  stage: wait_for_aws_pipeline_done
+  stage: wait_for_aws_scale_pipeline_done
   script:
     - export PIPELINE_ID=`cat /tmp/${ENV_ID}_scale`
     - test -n "${PIPELINE_ID}"
