--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,32 +1,30 @@
-#before_script:
-#  - sudo -i sh -c 'minikube status | grep -i running  && minikube delete || :'
-#  - sudo -i sh -c 'docker inspect --type=image k8spray/ansible:2.3.0.0 && echo ok || :'
-
 stages:
     - prepare
-#    - prepare2
-
-#minikube:
-#  stage: prepare
-#  script:
-#    - sudo -i `pwd`/bin/bootstrap.sh
 
 node_sqy8yh_provision:
   stage: prepare
   script:
-    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh sqy8yh
+    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/ng_maas.sh sqy8yh
+  environment:
+    name: baremetal
 
 node_fhqedd_provision:
   stage: prepare
   script:
-    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh fhqedd
+    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/ng_maas.sh fhqedd
+  environment:
+    name: baremetal
 
 node_6fw4nx_provision:
   stage: prepare
   script:
-    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh 6fw4nx
+    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/ng_maas.sh 6fw4nx
+  environment:
+    name: baremetal
 
 node_7trye3_provision:
   stage: prepare
   script:
-    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/maas_redeploy.sh 7trye3
+    - maas login localhost http://localhost:5240/MAAS/ ${MAAS_TOKEN} && /usr/local/bin/ng_maas.sh 7trye3
+  environment:
+    name: baremetal
